--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
 </head>
 <body>
   <center>
-    <a href="リコーダー(提出).mp4" download="リコーダー(提出).mp4">提出用</a>
-    <a href="リコーダー(魔改造).mp4" download="リコーダー(魔改造).mp4">魔改造</a>
-    <br>
-      <br>
-      <a href="Pharrell Williams - Happy (Video).mp4" download="Pharrell Williams - Happy (Video).mp4">運動会ダンス</a>
-      
+    <a href="リコーダー動画.zip" download="リコーダー動画.zip">ダウンロードはこちら</a>
 </body>
 </html>
