--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <center>
-    <a href="リコーダー動画.zip" download="リコーダー動画.zip">ダウンロードはこちら</a>
+    <a href="リコーダー動画.zip" download="リコーダー動画.zip">通常版ダウンロードはこちら</a>
+    <a href="リコーダー動画（魔改造）.zip" download="リコーダー動画（魔改造）.zip">魔改造版ダウンロードはこちら</a>
 </body>
 </html>
